--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
     <!------------------------------------------------------------------------->
 
     <div id="bottom-section" class="d-flex space-between">
-      <div class="left d-flex align-y debug">
+      <div class="left d-flex align-y ">
         <!-- Song Image -->
         <img id="song-image" class="mr-10" src="./img/sinister.jpeg" alt="" />
 
@@ -376,7 +376,7 @@
         
       </div>
 
-      <div class="center d-flex flex-column justify-center align-y debug">
+      <div class="center d-flex flex-column justify-center align-y ">
         <!-- Controls -->
         <!-- Top section -->
         <div class="controls-top d-flex justify-center align-y my-10">
@@ -405,7 +405,7 @@
         </div>
       </div>
 
-      <div class="right debug">
+      <div class="right ">
         <div class="volume-controls flex-end d-flex  align-y my-40">
           <i class="fa-solid fa-list-ul mx-10"></i>
           <i class="fa-solid fa-display mx-10"></i>
